# ionic_haystack

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: example_ionic_agent.ipynb
ionic_haystack/: prompt_templates.py  tool.py
