[tool.poetry]
name = "ionic-haystack"
version = "0.1.4"
description = "Ionic Commerce tool for Haystack"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Ionic-API-SDK = "^0.7.1"
farm-haystack = {extras = ["colab"], version = "^1.24.0"}

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.1.1"}
pytest = "^8.0.0"
ruff = "^0.1.15"
jinja2 = "^3.1.3"

[project.urls]
"Homepage" = "https://ioniccommerce.com"
"GitHub" = "https://github.com/ioniccommerce/ionic_haystack"
"Bug Tracker" = "https://github.com/ioniccommerce/ionic_haystack/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
